# RTC_InterTaskCommunication

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  FreeRTOSConfig.h  main.c  main_blinky.c
ipc_app/: CMakeLists.txt  FreeRTOSConfig.h  main.c  main_exercise.c  trial.c
src/: CMakeLists.txt
src/portable/: CMakeLists.txt
src/portable/MSVC-MingW/: portmacro.h
src/portable/Posix/: port.c  portmacro.h
